# eaml-lang

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.claude/: eaml-python-bridge-agent-prompt.md
.claude/references/: eaml-grammar-checklist.html  eaml-layer1-notation-reference.md  eaml-layer2-grammar-patterns.md  eaml-layer3-prior-art.md  eaml-layer4-compiler-theory.md  eaml-layer5-design-decisions.md
.githooks/: pre-commit
.github/workflows/: ci.yml  python-publish.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-error-foundation-and-lexer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-parser/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-semantic-analysis/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-code-generation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/eaml-cli/: Cargo.toml
crates/eaml-cli/src/: main.rs
crates/eaml-cli/tests/: cli_tests.rs  example_tests.rs
crates/eaml-codegen/: Cargo.toml
crates/eaml-codegen/src/: emitters.rs  lib.rs  names.rs  types.rs  writer.rs
crates/eaml-codegen/tests/: agents.rs  examples.rs  integration.rs  models.rs  names.rs  prompts.rs  schemas.rs  test_helpers.rs  tools.rs  types.rs  writer.rs
crates/eaml-codegen/tests/snapshots/: examples__generate_all_type_variants.snap  examples__generate_minimal.snap  examples__generate_sentiment.snap
crates/eaml-errors/: Cargo.toml
crates/eaml-lexer/: Cargo.toml
crates/eaml-lexer/src/: intern.rs  lexer.rs  lib.rs  logos_lexer.rs  token.rs
crates/eaml-lexer/tests/: comments.rs  errors.rs  keywords.rs  literals.rs  operators.rs  python_bridge.rs  task1_raw_tokens.rs  template.rs
crates/eaml-lexer/tests/common/: mod.rs
crates/eaml-parser/: Cargo.toml
crates/eaml-semantic/: Cargo.toml
crates/eaml-semantic/src/: cap_checker.rs  lib.rs  resolver.rs  scope.rs  symbol_table.rs  type_checker.rs
crates/eaml-semantic/tests/: capabilities.rs  integration.rs  resolution.rs  scoping.rs  test_helpers.rs  types.rs
examples/01-minimal/: minimal.eaml
examples/02-sentiment/: sentiment.eaml  sentiment.eaml.md
examples/03-python-bridge/: bridge.eaml
examples/04-multi-tool-agent/: agent.eaml
examples/06-capability-error/: bad_model.eaml  bad_model.eaml.md
examples/07-all-type-variants/: types.eaml
python/: pyproject.toml
python/src/eaml_runtime/: __init__.py  agent.py  errors.py  events.py  pyproject.toml  telemetry.py  validation.py
python/src/eaml_runtime/providers/: __init__.py  anthropic.py  ollama.py  openai.py
python/tests/: conftest.py  helpers.py  test_errors.py  test_execute_prompt.py  test_providers.py  test_runtime_import.py  test_telemetry.py  test_validation.py
spec/: CAPABILITIES.md  ERRORS.md  PYTHON_BRIDGE.md  TYPESYSTEM.md  grammar.ebnf
(+79 files in other folders)
