[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "eaml-runtime"
version         = "0.1.0"
description     = "Runtime library for EAML-generated Python code"
requires-python = ">=3.11"
license         = { text = "Apache-2.0" }
dependencies    = [
    "anthropic>=0.43",  # for anthropic provider
    "openai>=1.0",       # for openai provider
    "pydantic>=2.0",     # for config parsing
    "httpx>=0.25",      # for ollama provider
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eaml_runtime"]

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
