[package]
name    = "eaml-cli"
version.workspace = true
edition.workspace = true

[dependencies]
eaml-errors   = { path = "../eaml-errors" }
eaml-lexer    = { path = "../eaml-lexer" }
eaml-parser   = { path = "../eaml-parser" }
eaml-semantic = { path = "../eaml-semantic" }
eaml-codegen  = { path = "../eaml-codegen" }
clap          = { workspace = true }

[dev-dependencies]
