[package]
name    = "eaml-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
eaml-errors   = { path = "../eaml-errors" }
eaml-lexer    = { path = "../eaml-lexer" }
eaml-parser   = { path = "../eaml-parser" }
eaml-semantic = { path = "../eaml-semantic" }

[dev-dependencies]
insta = { workspace = true }
