[package]
name    = "eaml-lexer"
version.workspace = true
edition.workspace = true

[dependencies]
eaml-errors = { path = "../eaml-errors" }
logos       = { workspace = true }      # optional — can hand-write instead
lasso       = { workspace = true }      # string interning

[dev-dependencies]
insta = { workspace = true }