[package]
name    = "eaml-semantic"
version.workspace = true
edition.workspace = true

[dependencies]
eaml-errors = { path = "../eaml-errors" }
eaml-lexer = { path = "../eaml-lexer" }
eaml-parser = { path = "../eaml-parser" }
lasso = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
